docker-k8s-web-demo/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-demo
  labels:
    app.kubernetes.io/part-of: web-demo
