docker-k8s-web-demo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-demo
  namespace: web-demo
  labels:
    app.kubernetes.io/name: web-demo
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: web-demo
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
      protocol: TCP
